--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,31 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "Launch current file",
+            "program": "${file}"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Mocha Tests",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/test"
+            ],
+            "console": "integratedTerminal"
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "启动程序",
             "program": "${workspaceFolder}\\index.js",
-            "args": ["./test","./dist"],
+            "args": [
+                "src=./data",
+                "dist=./data/dist"
+            ]
         }
     ]
 }
